fix minor page formatting problem with table valign

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -845,7 +845,7 @@ function clear_org_list()
    <DIV id = "co" name="slider" class="topItem">CoGe BLAST Options:</DIV>
    <DIV class="dropMenu" id="query_seqs">
    <TABLE class="list" >
-       <TR>
+       <TR valign=top>
           <TD>
    	<DIV id="org_name"><TMPL_VAR NAME="ORG_NAME"></DIV>
    	<DIV id="blah">Organism Name: <input type="text" size=11 onFocus="show_add();search_bar('org_text')" style="font-style:italic" value="Search" name="org_text" id="org_text" onBlur="restore_search_bar('org_text')" onKeyUp='timing();'></DIV>
