rearranged applications, removed MSAView and TreeView

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -111,12 +111,12 @@ function animate_section(name, style, speedy, show) {
 	 <li><a href="/CoGe/" target="_self">Home</a></li>
 	 <li>Applications
 	  <ul>
-	  <li><a href="/CoGe/GEvo.pl" target="_self">GEvo</a></li>
-	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
-	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
-	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>
 	  <li><a href="/CoGe/GenomeView.pl" target="_self">GenomeView</a></li>
+	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
+	  <li><a href="/CoGe/GEvo.pl" target="_self">GEvo</a></li>
+<!--	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
+	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>-->
       </ul>
 	</li>
 	<li>Downloads
