--- a/web/tmpl/GEvo_direct.tmpl
+++ b/web/tmpl/GEvo_direct.tmpl
@@ -1,4 +1,4 @@
-<script src="/CoGe/gobe/static/swfobject.js" ></script>
+<script src="/CoGe/gobe/static/swfobject/swfobject.js" ></script>
 <script language="JavaScript">
 function prepare_update()
  {
@@ -18,14 +18,20 @@ function prepare_update()
 <TMPL_VAR NAME="STUFF">
 <DIV id="flash_viewer"></DIV>
 <SCRIPT language="JavaScript">
-    var so = new SWFObject("/CoGe/gobe/flash/gobe.swf?<TMPL_VAR NAME="GOBE_VERSION">", "gobe", <TMPL_VAR NAME="WIDTH">, <TMPL_VAR NAME="HEIGHT">, "9", "#FFFFFF");
-    so.useExpressInstall('/CoGe/gobe/flash/expressinstall.swf');
-    so.addVariable('n', <TMPL_VAR NAME="SEQ_NUM">);
-    so.addVariable('base_url', '/CoGe/');
-    so.addVariable('img_url', '/CoGe/tmp/GEvo/');
-    so.addVariable('base_name', '<TMPL_VAR NAME="BASE_NAME">');
-    so.addVariable('freezable', getQueryParamValue('freezable') || 'false'); 
-    so.addVariable('pad_gs', jQuery('#pad_gs') ? jQuery('#pad_gs').val()  : getQueryParamValue('pad_gs') || '0'); 
-    so.addVariable('gsid', getQueryParamValue('gsid') || getQueryParamValue('genespace_id') || '0'); 
-    so.write("flash_viewer");
+    var getQueryParamValue = swfobject.getQueryParamValue;
+    var width = getQueryParamValue('w') || <TMPL_VAR NAME="WIDTH">; 
+    var height = getQueryParamValue('h') || <TMPL_VAR NAME="HEIGHT">; 
+    var params = {'bgcolor': '#FFFFFF'};
+    var flashVars = {
+            'n'        : getQueryParamValue('n') || <TMPL_VAR NAME="SEQ_NUM">,
+            'freezable': getQueryParamValue('freezable') || 'false',
+            'pad_gs'   : jQuery('#pad_gs') ? jQuery('#pad_gs').val()  : getQueryParamValue('pad_gs') || '0',
+            'gsid'     : getQueryParamValue('gsid') || getQueryParamValue('genespace_id') || '0',
+            'base_url' : getQueryParamValue('base_url')|| '/CoGe/',
+            'img_url'  : getQueryParamValue('img_url')|| '/CoGe/tmp/GEvo/',
+            'base_name': getQueryParamValue('base_name')|| '<TMPL_VAR NAME="BASE_NAME">'
+        };
+    swfobject.embedSWF("/CoGe/gobe/flash/gobe.swf", "flash_viewer", width, height, "9.0.0"
+                , "/CoGe/gobe/static/swfobject/expresssinstall.swf", flashVars, params, {});
+
 </script>
