Added tmpl_var to put in option to show fids if jkane is user.

--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -136,6 +136,7 @@ jQuery.fn.unCheckCheckboxes = function()
            		 <option value = "fasta">Get FASTA Sequences</option>
            		 <option value = "featmap">Get Feature Genome Map</option>
            		 <option value = "xls">Export to Excel</option>
+           		 <TMPL_VAR NAME=JOSH>
           </selected>  
           <input type=button value="Go" onClick="feature_checkboxes()">    
   </div>
