added link to nsf

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -209,7 +209,7 @@ login(['uname', 'pwd','url'],[place_cookie]);
 To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, please visit our <a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html">downloads page</a> (also available on the menu bar).
 <br>
 <div align=center>
-<img src="./picts/nsf-logo.gif"><br>
+<a href="http://www.nsf.gov" target= "_new"><img src="./picts/nsf-logo.gif" border=0><br></a>
 <span class="small">Funding provided by NSF</span>
 </div>
 </div>
