added support for specifying to coloring CDSs by codon usage

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -887,6 +887,14 @@ function get_seq(seq_num)
   </TD>
  <TR>
   <Td>
+<font class="small">Color wobble codon content:</font>
+  <td>
+<label class="small"><input class="backbox" type="radio" name="show_cbc" id="show_cbc" tabindex="1" value="1" <TMPL_VAR NAME="CBC_YES"> />Yes</label>
+<label class=small><input class="backbox" type="radio" name="show_cbc" id="show_cbc" tabindex="1" value="0" <TMPL_VAR NAME="CBC_NO"> />No</label>
+    </DIV>
+  </TD>
+ <TR>
+  <Td>
 <font class="small">Auto adjust overlapping features? </font>
   <td>
   <label class="small"><input class="backbox" type="radio" name="overlap_adjustment" id="overlap_adjustment" tabindex="1" value="1" <TMPL_VAR NAME="OVERLAP_YES">/>Yes</label>
